--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "github-markdown-css": "^2.10.0",
     "glob": "^7.1.2",
     "highlight.js": "^9.12.0",
+    "js-yaml": "^3.12.0",
     "markdown-it": "^8.4.2",
     "markdown-it-attrs": "^2.3.1",
     "markdown-it-deflist": "^2.0.3",
