--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "markdown-it-deflist": "^2.0.3",
     "markdown-it-meta": "^0.0.1",
     "mkdirp": "^0.5.1",
+    "slugify": "^1.3.1",
     "yargs": "^12.0.1"
   },
   "devDependencies": {
