--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
     "extends": ["data-ui"],
     "env": {
-        "node": true
+        "node": true,
+        "jest": true
     },
     "rules": {
         "no-negated-condition": 0,
