--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "transform": "bin/yfm-transform",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "css": "npm run css:compile && npm run css:prefix && npm run css:minify",
     "css:compile": "node-sass src/scss/yfm.scss dist/css/yfm.css",
     "css:prefix": "postcss dist/css/yfm.css --output dist/css/yfm.css",
@@ -42,16 +42,20 @@
     "yargs": "^12.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-rc.1",
+    "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0-rc.1",
     "@babel/preset-env": "7.0.0-rc.1",
     "autoprefixer": "^9.1.1",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.6",
+    "babel-jest": "^23.6.0",
     "clean-css-cli": "^4.2.1",
     "eslint": "^4.19.1",
     "eslint-config-data-ui": "^3.0.1",
+    "jest": "^23.6.0",
     "node-sass": "^4.9.3",
     "postcss-cli": "^6.0.0",
+    "regenerator-runtime": "^0.13.1",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^4.0.0-beta.8",
     "uglify-js": "^3.4.7"
