--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0-rc.1",
     "@babel/preset-env": "7.0.0-rc.1",
+    "@types/jest": "^24.0.11",
     "autoprefixer": "^9.1.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.6",
