--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yfm-transform",
-  "version": "0.24.2",
+  "version": "2.0.0-alpha",
   "description": "Yandex Flavored Markdown utilities",
   "author": "Data UI Team <data-ui@yandex-team.ru>",
   "license": "UNLICENSED",
