fix(tabs-crash): Fix crash CLOUDFRONT-1318

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yfm-transform",
-  "version": "2.0.0-alpha",
+  "version": "2.0.0-alpha.2",
   "description": "Yandex Flavored Markdown utilities",
   "author": "Data UI Team <data-ui@yandex-team.ru>",
   "license": "UNLICENSED",
