--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "node-sass": "^4.9.3",
     "postcss-cli": "^6.0.0",
     "regenerator-runtime": "^0.13.1",
-    "rollup": "^0.64.1",
-    "rollup-plugin-babel": "^4.0.0-beta.8",
+    "rollup": "^1.15.5",
+    "rollup-plugin-babel": "^4.3.2",
     "uglify-js": "^3.4.7"
   }
 }
