DOCSTOOLS-75: Добавить работу с условиями в toc-ах в yfm (#95)
* add(lib): add capability of filtering conditionals in toc

* fix(lib): add capability of using conditions in elements with items

Ранее проверка на when осуществлялась только для элементов без items.
Теперь when можно указывать и в элементах с items

* fix(fileProcess): fix filter func + add camelize

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "precommit": "npm run lint && npm run test"
   },
   "dependencies": {
+    "camelize": "^1.0.0",
     "chalk": "^3.0.0",
     "glob": "^7.1.2",
     "highlight.js": "^9.18.1",
