--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "markdown-it": "^10.0.0",
     "markdown-it-attrs": "^3.0.2",
     "markdown-it-deflist": "^2.0.3",
+    "markdown-it-imsize": "^2.0.1",
     "markdown-it-meta": "^0.0.1",
     "mkdirp": "^1.0.3",
     "performance-now": "^2.1.0",
