fix(build): explicitly specify runtime imports for pkg
The pkg tool statically embeds all dependencies into a single binary
so that if import is resolved in runtime, it cannot include it. Let's
help pkg to do its job properly and specify such imports manually.

--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "rollup-plugin-babel": "^4.3.2",
     "uglify-js": "^3.8.0"
   },
+  "pkg": {
+    "scripts": ["node_modules/markdown-it-imsize/lib/**/*.js", "lib/plugins/*.js"]
+  },
   "husky": {
     "hooks": {
       "pre-commit": "npm run precommit"
