fix(build): correct explicit imports for pkg
In sandbox environment yfm-transform and its dependencies are on the
same level inside node_modules, while pkg globs are relative to the
directory of yfm-transform (dirname of its package.json), so we should
go one level up.

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "pkg": {
     "scripts": [
+      "../markdown-it-imsize/lib/**/*.js",
       "node_modules/markdown-it-imsize/lib/**/*.js",
       "lib/plugins/*.js"
     ]
