--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yfm-transform",
-  "version": "2.13.8",
+  "version": "3.0.0-alpha.0",
   "description": "Yandex Flavored Markdown utilities",
   "author": "Data UI Team <data-ui@yandex-team.ru>",
   "license": "UNLICENSED",
@@ -9,14 +9,11 @@
     "url": "https://github.yandex-team.ru/data-ui/yfm"
   },
   "main": "lib/index.js",
-  "bin": "bin/yfm-transform",
   "files": [
     "dist",
-    "lib",
-    "bin"
+    "lib"
   ],
   "scripts": {
-    "transform": "bin/yfm-transform",
     "test": "jest --coverage",
     "lint": "eslint \"**/*.js\"",
     "css": "npm run css:compile && npm run css:prefix && npm run css:minify",
@@ -40,6 +37,7 @@
     "markdown-it-deflist": "^2.0.3",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-meta": "^0.0.1",
+    "markdown-it-sup": "^1.0.0",
     "mkdirp": "^1.0.3",
     "performance-now": "^2.1.0",
     "slugify": "^1.3.1",
@@ -62,13 +60,6 @@
     "rollup": "^1.31.1",
     "rollup-plugin-babel": "^4.3.2",
     "uglify-js": "^3.8.0"
-  },
-  "pkg": {
-    "scripts": [
-      "../markdown-it-imsize/lib/**/*.js",
-      "node_modules/markdown-it-imsize/lib/**/*.js",
-      "lib/plugins/*.js"
-    ]
   },
   "husky": {
     "hooks": {
