--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "markdown-it-meta": "^0.0.1",
     "markdown-it-sup": "^1.0.0",
     "slugify": "^1.3.1",
-    "typescript": "^3.7.5",
     "yargs": "^15.1.0"
   },
   "devDependencies": {
@@ -46,7 +45,7 @@
     "babel-eslint": "^10.0.3",
     "clean-css-cli": "^4.3.0",
     "eslint": "^6.8.0",
-    "eslint-config-data-ui": "^8.2.0",
+    "eslint-plugin-security": "^1.4.0",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "node-sass": "^4.13.1",
