--- a/package.json
+++ b/package.json
@@ -27,33 +27,32 @@
     "precommit": "npm run lint && npm run test"
   },
   "dependencies": {
-    "chalk": "^3.0.0",
-    "highlight.js": "^9.18.1",
+    "chalk": "^4.0.0",
+    "highlight.js": "^10.0.3",
     "markdown-it": "^10.0.0",
     "markdown-it-attrs": "^3.0.2",
     "markdown-it-deflist": "^2.0.3",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-meta": "^0.0.1",
     "markdown-it-sup": "^1.0.0",
-    "slugify": "^1.3.1",
-    "yargs": "^15.1.0"
+    "slugify": "^1.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "autoprefixer": "^9.7.4",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "autoprefixer": "^9.8.0",
     "babel-eslint": "^10.0.3",
     "clean-css-cli": "^4.3.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.1.0",
     "eslint-plugin-security": "^1.4.0",
     "husky": "^4.2.3",
-    "jest": "^25.1.0",
-    "node-sass": "^4.13.1",
+    "jest": "^26.0.1",
+    "node-sass": "^4.14.1",
     "postcss-cli": "^7.1.0",
     "regenerator-runtime": "^0.13.1",
-    "rollup": "^1.31.1",
+    "rollup": "^2.13.1",
     "rollup-plugin-babel": "^4.3.2",
-    "uglify-js": "^3.8.0"
+    "uglify-js": "^3.9.4"
   },
   "husky": {
     "hooks": {
