--- a/package.json
+++ b/package.json
@@ -67,6 +67,10 @@
     "markdown",
     "yandex",
     "docs",
-    "yfm"
+    "yfm",
+    "documentation",
+    "tool",
+    "tools",
+    "generator"
   ]
 }
