--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-meta": "^0.0.1",
     "markdown-it-sup": "^1.0.0",
+    "markdown-it-video": "^0.6.3",
     "slugify": "^1.3.1"
   },
   "devDependencies": {
