--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@doc-tools/transform",
   "version": "1.4.2",
-  "description": "Простой трансформер текста на Yandex Flavored Markdown в HTML",
+  "description": "A simple transformer of text in YFM (Yandex Flavored Markdown) to HTML",
   "author": "YFM Team <yfm-team@yandex.ru>",
   "license": "MIT",
   "repository": {
