--- a/package.json
+++ b/package.json
@@ -27,33 +27,34 @@
     "precommit": "npm run lint && npm run test"
   },
   "dependencies": {
-    "chalk": "^4.0.0",
-    "highlight.js": "^10.0.3",
-    "markdown-it": "^10.0.0",
-    "markdown-it-attrs": "^3.0.2",
-    "markdown-it-deflist": "^2.0.3",
+    "chalk": "^4.1.0",
+    "highlight.js": "^10.6.0",
+    "markdown-it": "^12.0.4",
+    "markdown-it-attrs": "^4.0.0",
+    "markdown-it-deflist": "^2.1.0",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-meta": "^0.0.1",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-video": "^0.6.3",
-    "slugify": "^1.3.1"
+    "postcss": "^8.2.8",
+    "slugify": "^1.4.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "autoprefixer": "^9.8.0",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.0.3",
-    "clean-css-cli": "^4.3.0",
-    "eslint": "^7.1.0",
+    "clean-css-cli": "^5.2.1",
+    "eslint": "^7.21.0",
     "eslint-plugin-security": "^1.4.0",
     "husky": "^4.2.3",
-    "jest": "^26.0.1",
-    "node-sass": "^4.14.1",
-    "postcss-cli": "^7.1.0",
-    "regenerator-runtime": "^0.13.1",
-    "rollup": "^2.13.1",
+    "jest": "^26.6.3",
+    "node-sass": "^5.0.0",
+    "postcss-cli": "^8.3.1",
+    "regenerator-runtime": "^0.13.7",
+    "rollup": "^2.41.1",
     "rollup-plugin-babel": "^4.4.0",
-    "uglify-js": "^3.9.4"
+    "uglify-js": "^3.13.1"
   },
   "husky": {
     "hooks": {
