--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "highlight.js": "^10.6.0",
+    "lodash": "^4.17.21",
     "markdown-it": "^12.0.4",
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-deflist": "^2.1.0",
@@ -36,6 +37,8 @@
     "markdown-it-meta": "^0.0.1",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-video": "^0.6.3",
+    "markdownlint": "^0.23.1",
+    "markdownlint-rule-helpers": "^0.14.0",
     "postcss": "^8.2.8",
     "slugify": "^1.4.7"
   },
