--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.0",
+    "github-slugger": "^1.3.0",
     "highlight.js": "^10.6.0",
     "lodash": "^4.17.21",
     "markdown-it": "^12.0.4",
