--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "github-slugger": "^1.3.0",
     "lodash": "^4.17.21",
     "markdown-it": "^12.0.4",
+    "markdown-it-attrs": "^4.0.0",
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-meta": "^0.0.1",
