feat: eslint, prettier, tsconfig, deps, npm scripts

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
+    "env": {
+        "test": {
+            "plugins": [
+                "@babel/plugin-transform-modules-commonjs"
+            ]
+        }
+    },
     "presets": [
         [
             "@babel/env",
