--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
   ],
   "scripts": {
     "test": "jest --coverage",
-    "lint": "eslint \"lib/**/*.js\"",
+    "lint": "npx eslint",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
     "css": "npm run css:compile && npm run css:prefix && npm run css:minify",
     "css:compile": "node-sass src/scss/yfm.scss dist/css/yfm.css",
     "css:prefix": "postcss dist/css/yfm.css --output dist/css/yfm.css",
     "css:minify": "cleancss dist/css/yfm.css --output dist/css/yfm.min.css",
-    "js": "npm run js:compile && npm run js:minify",
-    "js:compile": "rollup -c",
+    "build": "npm run js:compile && npm run js:minify",
+    "js:compile": "tsc -p tsconfig.transform.json && tsc -p tsconfig.browser.json && rollup -c && npm run cleanup",
     "js:minify": "uglifyjs dist/js/yfm.js --output dist/js/yfm.min.js",
-    "dist": "npm run css && npm run js",
+    "cleanup": "rm ./dist/*.*",
+    "dist": "npm run css && npm run build",
     "precommit": "npm run lint && npm run test"
   },
   "dependencies": {
@@ -45,20 +47,35 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
     "@babel/preset-env": "^7.16.8",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/github-slugger": "^1.3.0",
+    "@types/highlight.js": "^10.1.0",
+    "@types/jest": "^27.4.0",
+    "@types/lodash": "^4.14.178",
+    "@types/markdown-it": "^12.2.3",
+    "@types/markdown-it-attrs": "^4.1.0",
+    "@types/markdownlint": "^0.18.0",
+    "@types/node": "^17.0.10",
+    "@yandex-cloud/eslint-config": "github:yandex-cloud/eslint-config",
+    "@yandex-cloud/prettier-config": "github:yandex-cloud/prettier-config",
+    "@yandex-cloud/tsconfig": "github:yandex-cloud/tsconfig",
     "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.0.3",
     "clean-css-cli": "^5.5.0",
     "eslint": "^7.21.0",
     "eslint-plugin-security": "^1.4.0",
-    "jest": "^26.6.3",
+    "jest": "^27.4.7",
+    "markdown-it-attrs": "^4.1.3",
     "node-sass": "^5.0.0",
     "postcss-cli": "^8.3.1",
     "regenerator-runtime": "^0.13.9",
     "rollup": "^2.63.0",
     "rollup-plugin-babel": "^4.4.0",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.5",
     "uglify-js": "^3.14.5"
   },
   "peerDependencies": {
@@ -77,5 +94,9 @@
     "tool",
     "tools",
     "generator"
+  ],
+  "moduleDirectories": [
+    "node_modules",
+    "src"
   ]
 }
