--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "css:prefix": "postcss dist/css/yfm.css --output dist/css/yfm.css",
     "css:minify": "cleancss dist/css/yfm.css --output dist/css/yfm.min.css",
     "build": "npm run js:compile && npm run js:minify",
-    "js:compile": "tsc -p tsconfig.transform.json && tsc -p tsconfig.browser.json && rollup -c && npm run cleanup",
+    "js:compile": "npm run js:compile:lib && npm run js:compile:dist",
+    "js:compile:lib": "tsc -p tsconfig.transform.json",
+    "js:compile:dist": "tsc -p tsconfig.browser.json && rollup -c && npm run cleanup",
     "js:minify": "uglifyjs dist/js/yfm.js --output dist/js/yfm.min.js",
     "cleanup": "rm ./dist/*.*",
     "dist": "npm run css && npm run build",
@@ -65,9 +67,9 @@
     "eslint": "^7.21.0",
     "eslint-plugin-security": "^1.4.0",
     "jest": "^27.4.7",
-    "markdown-it-attrs": "^4.1.3",
     "node-sass": "^5.0.0",
     "postcss-cli": "^8.3.1",
+    "prettier": "^2.5.1",
     "regenerator-runtime": "^0.13.9",
     "rollup": "^2.63.0",
     "rollup-plugin-babel": "^4.4.0",
