--- a/tsconfig.transform.json
+++ b/tsconfig.transform.json
@@ -1,14 +1,15 @@
 {
   "extends": "@yandex-cloud/tsconfig/tsconfig",
   "compilerOptions": {
-    "lib": ["DOM", "ESNext"],
+    "lib": ["DOM", "ES6"],
     "outDir": "lib",
-    "module": "esnext",
+    "module": "commonjs",
     "baseUrl": ".",
     "declaration": true,
     "isolatedModules": true,
     "noImplicitAny": true,
-    "types": ["node", "jest"],
+    "target": "ES6",
+    "types": ["node"],
   },
-  "include": ["src/transform/*"],
+  "include": ["src/transform/**/*"],
 }
