--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
     "overrides": [{
         "files": ["*"],
         "rules": {
-            "@typescript-eslint/no-explicit-any": 2
+            "@typescript-eslint/no-explicit-any": 2,
         }
     }]
 }
