--- a/package.json
+++ b/package.json
@@ -21,12 +21,10 @@
     "css:compile": "node-sass src/scss/yfm.scss dist/css/yfm.css",
     "css:prefix": "postcss dist/css/yfm.css --output dist/css/yfm.css",
     "css:minify": "cleancss dist/css/yfm.css --output dist/css/yfm.min.css",
-    "build": "npm run js:compile && npm run js:minify",
-    "js:compile": "npm run js:compile:lib && npm run js:compile:dist",
-    "js:compile:lib": "tsc -p tsconfig.transform.json",
-    "js:compile:dist": "tsc -p tsconfig.browser.json && rollup -c && npm run cleanup",
-    "js:minify": "uglifyjs dist/js/yfm.js --output dist/js/yfm.min.js",
-    "cleanup": "rm ./dist/*.*",
+    "build": "npm run build:lib && npm run build:dist",
+    "build:lib": "tsc -p tsconfig.transform.json",
+    "build:dist": "rollup -c && npm run build:dist:minify",
+    "build:dist:minify": "uglifyjs dist/js/yfm.js --output dist/js/yfm.min.js",
     "dist": "npm run css && npm run build",
     "precommit": "npm run lint && npm run test"
   },
@@ -50,6 +48,7 @@
     "@babel/core": "^7.16.7",
     "@babel/plugin-transform-modules-commonjs": "^7.16.8",
     "@babel/preset-env": "^7.16.8",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/github-slugger": "^1.3.0",
     "@types/highlight.js": "^10.1.0",
     "@types/jest": "^27.4.0",
