--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.0",
+    "get-root-node-polyfill": "^1.0.0",
     "github-slugger": "^1.4.0",
     "lodash": "^4.17.21",
     "markdown-it": "^12.3.2",
@@ -45,6 +46,8 @@
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.0.3",
     "clean-css-cli": "^5.5.0",
