feat: ci typpecheck

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,5 @@ jobs:
         run: npm run lint
       - name: Tests
         run: npm run test
+      - name: Typecheck
+        run: npm run typecheck
