feat: changed exports.default to module.exports

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
         "files": ["*"],
         "rules": {
             "@typescript-eslint/no-explicit-any": 2,
+            "@typescript-eslint/no-namespace": 1
         }
     }]
 }
