--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "extends": "@yandex-cloud/tsconfig/tsconfig",
   "compilerOptions": {
-    "lib": ["DOM", "ESNext"],
+    "lib": ["DOM", "ES6"],
     "outDir": "lib",
-    "module": "esnext",
+    "module": "commonjs",
     "baseUrl": ".",
     "declaration": true,
     "isolatedModules": true,
     "noImplicitAny": true,
+    "target": "ES6",
     "types": ["node", "jest"],
   },
   "include": ["src/**/*", "test/**/*"],
