--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "test": "jest --coverage",
     "lint": "npx eslint \"{src,test}/**/*.{js,jsx,ts,tsx}\"",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "precommit": "npm run lint && npm run test"
+    "precommit": "npm run lint && npm run test",
+    "prepublishOnly": "npm run lint && npm run test && npm run build"
   },
   "dependencies": {
     "chalk": "^4.1.0",
