--- a/package.json
+++ b/package.json
@@ -30,55 +30,55 @@
     "prepublishOnly": "npm run lint && npm run test && npm run build"
   },
   "dependencies": {
-    "chalk": "^4.1.0",
-    "get-root-node-polyfill": "^1.0.0",
-    "github-slugger": "^1.4.0",
-    "lodash": "^4.17.21",
-    "markdown-it": "^12.3.2",
-    "markdown-it-attrs": "^4.1.3",
-    "markdown-it-deflist": "^2.1.0",
-    "markdown-it-imsize": "^2.0.1",
-    "markdown-it-meta": "^0.0.1",
-    "markdown-it-sup": "^1.0.0",
-    "markdown-it-video": "^0.6.3",
-    "markdownlint": "^0.23.1",
-    "markdownlint-rule-helpers": "^0.14.0",
-    "postcss": "^8.4.5",
-    "slugify": "^1.6.5"
+    "chalk": "4.1.2",
+    "get-root-node-polyfill": "1.0.0",
+    "github-slugger": "1.4.0",
+    "lodash": "4.17.21",
+    "markdown-it": "12.3.2",
+    "markdown-it-attrs": "4.1.3",
+    "markdown-it-deflist": "2.1.0",
+    "markdown-it-imsize": "2.0.1",
+    "markdown-it-meta": "0.0.1",
+    "markdown-it-sup": "1.0.0",
+    "markdown-it-video": "0.6.3",
+    "markdownlint": "0.23.1",
+    "markdownlint-rule-helpers": "0.14.0",
+    "postcss": "8.4.5",
+    "slugify": "1.6.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
-    "@babel/preset-env": "^7.16.8",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "@types/github-slugger": "^1.3.0",
-    "@types/highlight.js": "^10.1.0",
-    "@types/jest": "^27.4.0",
-    "@types/lodash": "^4.14.178",
-    "@types/markdown-it": "^12.2.3",
-    "@types/markdown-it-attrs": "^4.1.0",
-    "@types/markdownlint": "^0.18.0",
-    "@types/node": "^17.0.10",
+    "@babel/core": "7.16.10",
+    "@babel/plugin-transform-modules-commonjs": "7.16.8",
+    "@babel/preset-env": "7.16.11",
+    "@rollup/plugin-commonjs": "21.0.1",
+    "@rollup/plugin-node-resolve": "13.1.3",
+    "@rollup/plugin-typescript": "8.3.0",
+    "@types/github-slugger": "1.3.0",
+    "@types/highlight.js": "10.1.0",
+    "@types/jest": "27.4.0",
+    "@types/lodash": "4.14.178",
+    "@types/markdown-it": "12.2.3",
+    "@types/markdown-it-attrs": "4.1.0",
+    "@types/markdownlint": "0.18.0",
+    "@types/node": "17.0.10",
     "@yandex-cloud/eslint-config": "github:yandex-cloud/eslint-config",
     "@yandex-cloud/prettier-config": "github:yandex-cloud/prettier-config",
     "@yandex-cloud/tsconfig": "github:yandex-cloud/tsconfig",
-    "autoprefixer": "^10.4.2",
-    "babel-eslint": "^10.0.3",
-    "clean-css-cli": "^5.5.0",
-    "eslint": "^7.21.0",
-    "eslint-plugin-security": "^1.4.0",
-    "jest": "^27.4.7",
-    "node-sass": "^5.0.0",
-    "postcss-cli": "^8.3.1",
-    "prettier": "^2.5.1",
-    "regenerator-runtime": "^0.13.9",
-    "rollup": "^2.63.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5",
-    "uglify-js": "^3.14.5"
+    "autoprefixer": "10.4.2",
+    "babel-eslint": "10.1.0",
+    "clean-css-cli": "5.5.0",
+    "eslint": "7.32.0",
+    "eslint-plugin-security": "1.4.0",
+    "jest": "27.4.7",
+    "node-sass": "5.0.0",
+    "postcss-cli": "8.3.1",
+    "prettier": "2.5.1",
+    "regenerator-runtime": "0.13.9",
+    "rollup": "2.66.0",
+    "rollup-plugin-babel": "4.4.0",
+    "ts-jest": "27.1.3",
+    "typescript": "4.5.5",
+    "uglify-js": "3.14.5"
   },
   "peerDependencies": {
     "highlight.js": "^10.0.3"
