--- a/package.json
+++ b/package.json
@@ -37,10 +37,8 @@
     "markdown-it": "12.3.2",
     "markdown-it-attrs": "4.1.3",
     "markdown-it-deflist": "2.1.0",
-    "markdown-it-imsize": "2.0.1",
     "markdown-it-meta": "0.0.1",
     "markdown-it-sup": "1.0.0",
-    "markdown-it-video": "0.6.3",
     "markdownlint": "0.23.1",
     "markdownlint-rule-helpers": "0.14.0",
     "postcss": "8.4.5",
@@ -70,6 +68,7 @@
     "eslint": "7.32.0",
     "eslint-plugin-security": "1.4.0",
     "jest": "27.4.7",
+    "markdown-it-testgen": "^0.1.6",
     "node-sass": "5.0.0",
     "postcss-cli": "8.3.1",
     "prettier": "2.5.1",
