fix: package dependencies

--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
     "@types/markdown-it-attrs": "4.1.0",
     "@types/markdownlint": "0.18.0",
     "@types/node": "17.0.10",
-    "@yandex-cloud/eslint-config": "github:yandex-cloud/eslint-config",
-    "@yandex-cloud/prettier-config": "github:yandex-cloud/prettier-config",
-    "@yandex-cloud/tsconfig": "github:yandex-cloud/tsconfig",
+    "@yandex-cloud/eslint-config": "^1.0.1",
+    "@yandex-cloud/prettier-config": "^1.0.0",
+    "@yandex-cloud/tsconfig": "^1.0.0",
     "autoprefixer": "10.4.2",
     "babel-eslint": "10.1.0",
     "clean-css-cli": "5.5.0",
