--- a/tsconfig.transform.json
+++ b/tsconfig.transform.json
@@ -10,6 +10,7 @@
     "noImplicitAny": true,
     "target": "ES6",
     "types": ["node"],
+    "sourceMap": true,
   },
   "include": ["src/transform/**/*"],
 }
