--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "get-root-node-polyfill": "1.0.0",
     "github-slugger": "1.4.0",
     "lodash": "4.17.21",
-    "markdown-it": "12.3.2",
+    "markdown-it": "13.0.1",
     "markdown-it-attrs": "4.1.4",
     "markdown-it-deflist": "2.1.0",
     "markdown-it-meta": "0.0.1",
     "markdown-it-sup": "1.0.0",
-    "markdownlint": "0.25.1",
-    "markdownlint-rule-helpers": "0.14.0",
+    "markdownlint": "^0.25.1",
+    "markdownlint-rule-helpers": "0.17.2",
     "postcss": "8.4.16",
     "slugify": "1.6.5"
   },
@@ -48,12 +48,12 @@
     "@babel/core": "7.18.10",
     "@babel/plugin-transform-modules-commonjs": "7.18.6",
     "@babel/preset-env": "7.18.10",
-    "@rollup/plugin-commonjs": "21.0.1",
-    "@rollup/plugin-node-resolve": "13.1.3",
+    "@rollup/plugin-commonjs": "22.0.2",
+    "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-typescript": "8.3.4",
     "@types/github-slugger": "1.3.0",
     "@types/highlight.js": "10.1.0",
-    "@types/jest": "27.4.0",
+    "@types/jest": "28.1.7",
     "@types/lodash": "4.14.183",
     "@types/markdown-it": "12.2.3",
     "@types/markdown-it-attrs": "4.1.0",
@@ -65,9 +65,9 @@
     "autoprefixer": "10.4.8",
     "babel-eslint": "10.1.0",
     "clean-css-cli": "5.6.1",
-    "eslint": "7.32.0",
+    "eslint": "8.22.0",
     "eslint-plugin-security": "1.5.0",
-    "jest": "27.4.7",
+    "jest": "28.1.3",
     "markdown-it-testgen": "^0.1.6",
     "node-sass": "5.0.0",
     "postcss-cli": "8.3.1",
@@ -75,8 +75,8 @@
     "regenerator-runtime": "0.13.9",
     "rollup": "2.78.0",
     "rollup-plugin-babel": "4.4.0",
-    "ts-jest": "27.1.3",
-    "typescript": "4.5.5",
+    "ts-jest": "28.0.8",
+    "typescript": "4.7.4",
     "uglify-js": "3.17.0"
   },
   "peerDependencies": {
