--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@types/sanitize-html": "^2.6.2",
     "chalk": "4.1.2",
+    "debounce": "^1.2.1",
     "get-root-node-polyfill": "1.0.0",
     "github-slugger": "1.4.0",
     "lodash": "4.17.21",
@@ -43,6 +44,7 @@
     "markdown-it-sup": "1.0.0",
     "markdownlint": "^0.25.1",
     "markdownlint-rule-helpers": "0.17.2",
+    "node-html-parser": "^5.4.1",
     "postcss": "8.4.16",
     "sanitize-html": "^2.7.1",
     "slugify": "1.6.5"
@@ -54,6 +56,7 @@
     "@rollup/plugin-commonjs": "22.0.2",
     "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-typescript": "8.3.4",
+    "@types/debounce": "^1.2.1",
     "@types/github-slugger": "1.3.0",
     "@types/highlight.js": "10.1.0",
     "@types/jest": "28.1.7",
