--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "markdownlint": "^0.25.1",
     "markdownlint-rule-helpers": "0.17.2",
     "postcss": "8.4.16",
+    "sanitize-html": "^2.7.1",
     "slugify": "1.6.5"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
     "@types/markdown-it-attrs": "4.1.0",
     "@types/markdownlint": "0.18.0",
     "@types/node": "17.0.10",
+    "@types/sanitize-html": "^2.6.2",
     "@yandex-cloud/eslint-config": "^1.1.0",
     "@yandex-cloud/prettier-config": "^1.0.0",
     "@yandex-cloud/tsconfig": "^1.0.0",
