--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chalk": "4.1.2",
     "get-root-node-polyfill": "1.0.0",
     "github-slugger": "1.4.0",
+    "js-yaml": "^4.1.0",
     "lodash": "4.17.21",
     "markdown-it": "13.0.1",
     "markdown-it-attrs": "4.1.4",
@@ -56,6 +57,7 @@
     "@types/github-slugger": "1.3.0",
     "@types/highlight.js": "10.1.0",
     "@types/jest": "28.1.7",
+    "@types/js-yaml": "^4.0.5",
     "@types/lodash": "4.14.183",
     "@types/markdown-it": "12.2.3",
     "@types/markdown-it-attrs": "4.1.0",
