fix: Change runtime builder to esbuild

--- a/package.json
+++ b/package.json
@@ -15,15 +15,9 @@
     "src"
   ],
   "scripts": {
-    "build": "npm run build:css && npm run build:js",
-    "build:css": "npm run build:css:compile && npm run build:css:prefix && npm run build:css:minify",
-    "build:css:compile": "node-sass src/scss/yfm.scss dist/css/yfm.css",
-    "build:css:prefix": "postcss dist/css/yfm.css --output dist/css/yfm.css",
-    "build:css:minify": "cleancss dist/css/yfm.css --output dist/css/yfm.min.css",
-    "build:js": "npm run build:js:lib && npm run build:js:dist",
-    "build:js:lib": "tsc -p tsconfig.transform.json",
-    "build:js:dist": "rollup -c && npm run build:js:dist:minify",
-    "build:js:dist:minify": "uglifyjs dist/js/yfm.js --output dist/js/yfm.min.js",
+    "build": "npm run build:lib && npm run build:dist",
+    "build:lib": "tsc -p tsconfig.transform.json",
+    "build:dist": "./esbuild/build.js",
     "test": "jest --coverage",
     "lint": "npx eslint --max-warnings=0 \"{src,test}/**/*.{js,jsx,ts,tsx}\"",
     "typecheck": "tsc -p tsconfig.json --noEmit",
@@ -44,7 +38,6 @@
     "markdown-it-sup": "1.0.0",
     "markdownlint": "^0.25.1",
     "markdownlint-rule-helpers": "0.17.2",
-    "postcss": "8.4.16",
     "sanitize-html": "2.7.3",
     "slugify": "1.6.5"
   },
@@ -52,9 +45,6 @@
     "@babel/core": "7.18.10",
     "@babel/plugin-transform-modules-commonjs": "7.18.6",
     "@babel/preset-env": "7.18.10",
-    "@rollup/plugin-commonjs": "22.0.2",
-    "@rollup/plugin-node-resolve": "13.3.0",
-    "@rollup/plugin-typescript": "8.3.4",
     "@types/github-slugger": "1.3.0",
     "@types/highlight.js": "10.1.0",
     "@types/jest": "28.1.7",
@@ -68,22 +58,20 @@
     "@yandex-cloud/eslint-config": "^1.1.0",
     "@yandex-cloud/prettier-config": "^1.0.0",
     "@yandex-cloud/tsconfig": "^1.0.0",
-    "autoprefixer": "10.4.8",
+    "autoprefixer": "^10.4.15",
     "babel-eslint": "10.1.0",
-    "clean-css-cli": "5.6.1",
+    "esbuild": "^0.19.2",
+    "esbuild-sass-plugin": "^2.12.0",
     "eslint": "8.22.0",
     "eslint-plugin-security": "1.5.0",
     "jest": "28.1.3",
     "markdown-it-testgen": "^0.1.6",
-    "node-sass": "5.0.0",
-    "postcss-cli": "8.3.1",
+    "postcss": "^8.4.27",
+    "postcss-preset-env": "^9.1.1",
     "prettier": "2.7.1",
     "regenerator-runtime": "0.13.9",
-    "rollup": "2.78.0",
-    "rollup-plugin-babel": "4.4.0",
     "ts-jest": "28.0.8",
-    "typescript": "4.7.4",
-    "uglify-js": "3.17.0"
+    "typescript": "4.7.4"
   },
   "peerDependencies": {
     "highlight.js": "^10.0.3"
