--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "isolatedModules": true,
     "noImplicitAny": true,
     "target": "ES6",
-    "types": ["node", "jest"],
+    "types": ["node", "jest"]
   },
-  "include": ["src/**/*", "test/**/*"],
+  "include": ["src/**/*", "test/**/*"]
 }
