--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "@babel/plugin-transform-modules-commonjs": "7.18.6",
     "@babel/preset-env": "7.18.10",
     "@types/github-slugger": "1.3.0",
-    "@types/highlight.js": "10.1.0",
     "@types/jest": "28.1.7",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash": "4.14.183",
@@ -64,6 +63,7 @@
     "esbuild-sass-plugin": "^2.12.0",
     "eslint": "8.22.0",
     "eslint-plugin-security": "1.5.0",
+    "highlight.js": "^11.8.0",
     "jest": "28.1.3",
     "markdown-it-testgen": "^0.1.6",
     "postcss": "^8.4.27",
@@ -74,7 +74,7 @@
     "typescript": "4.7.4"
   },
   "peerDependencies": {
-    "highlight.js": "^10.0.3"
+    "highlight.js": "^10.0.3 || ^11"
   },
   "peerDependenciesMeta": {
     "highlight.js": {
