--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@doc-tools/transform",
-  "version": "3.11.0",
+  "name": "@diplodoc/transform",
+  "version": "1.0.0",
   "description": "A simple transformer of text in YFM (Yandex Flavored Markdown) to HTML",
   "author": "YFM Team <yfm-team@yandex.ru>",
   "license": "MIT",
