--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "dependencies": {
     "@diplodoc/tabs-extension": "^2.0.11",
     "chalk": "4.1.2",
+    "cheerio": "^1.0.0-rc.12",
+    "css": "^3.0.0",
+    "cssfilter": "0.0.10",
     "get-root-node-polyfill": "1.0.0",
     "github-slugger": "1.4.0",
     "js-yaml": "^4.1.0",
@@ -45,6 +48,7 @@
     "@babel/core": "7.18.10",
     "@babel/plugin-transform-modules-commonjs": "7.18.6",
     "@babel/preset-env": "7.18.10",
+    "@types/css": "0.0.34",
     "@types/github-slugger": "1.3.0",
     "@types/jest": "28.1.7",
     "@types/js-yaml": "^4.0.5",
