--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prepublishOnly": "npm run lint && npm run test && npm run build"
   },
   "dependencies": {
-    "@diplodoc/tabs-extension": "^2.0.11",
+    "@diplodoc/tabs-extension": "2.0.12",
     "chalk": "4.1.2",
     "cheerio": "^1.0.0-rc.12",
     "css": "^3.0.0",
