--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,28 @@
 {
-    "extends": ["@yandex-cloud/eslint-config", "@yandex-cloud/eslint-config/prettier"],
+    "extends": ["@diplodoc/eslint-config", "@diplodoc/eslint-config/prettier"],
     "root": true,
-    "overrides": [{
-        "files": ["*"],
-        "rules": {
-            "@typescript-eslint/no-explicit-any": 2,
-            "@typescript-eslint/no-namespace": 1,
-            "no-shadow": "off",
-            "@typescript-eslint/no-shadow": "off"
+    "overrides": [
+        {
+            "files": ["*"],
+            "rules": {
+                "@typescript-eslint/no-explicit-any": 2,
+                "@typescript-eslint/no-namespace": 1,
+                "no-shadow": "off",
+                "@typescript-eslint/no-shadow": "off"
+            }
+        },
+        {
+            "files": ["*.ts", "*.tsx"],
+            "parser": "@typescript-eslint/parser",
+            "parserOptions": {
+                "sourceType": "module",
+                "project": ["./tsconfig.transform.json", "./tsconfig.json"]
+            }
         }
-    }]
+    ],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    }
 }
