--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "@babel/core": "7.18.10",
     "@babel/plugin-transform-modules-commonjs": "7.18.6",
     "@babel/preset-env": "7.18.10",
+    "@diplodoc/eslint-config": "^1.0.11",
+    "@diplodoc/prettier-config": "^1.0.0",
+    "@diplodoc/tsconfig": "^1.0.2",
     "@types/css": "0.0.34",
     "@types/github-slugger": "1.3.0",
     "@types/jest": "28.1.7",
@@ -62,11 +65,9 @@
     "@yandex-cloud/prettier-config": "^1.0.0",
     "@yandex-cloud/tsconfig": "^1.0.0",
     "autoprefixer": "^10.4.15",
-    "babel-eslint": "10.1.0",
     "esbuild": "^0.19.2",
     "esbuild-sass-plugin": "^2.12.0",
     "eslint": "8.22.0",
-    "eslint-plugin-security": "1.5.0",
     "highlight.js": "^11.8.0",
     "jest": "28.1.3",
     "markdown-it-testgen": "^0.1.6",
