--- a/tsconfig.transform.json
+++ b/tsconfig.transform.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@yandex-cloud/tsconfig/tsconfig",
+  "extends": "@diplodoc/tsconfig",
   "compilerOptions": {
     "lib": ["DOM", "ES6"],
     "outDir": "lib",
