--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.18.10",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-transform-modules-commonjs": "7.18.6",
-    "@babel/preset-env": "7.18.10",
+    "@diplodoc/babel-preset": "^1.0.2",
     "@diplodoc/eslint-config": "^1.0.11",
     "@diplodoc/prettier-config": "^1.0.0",
     "@diplodoc/tsconfig": "^1.0.2",
