--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build:lib": "tsc -p tsconfig.transform.json",
     "build:dist": "./esbuild/build.js",
     "test": "jest --coverage",
-    "lint": "npx eslint --max-warnings=0 \"{src,test}/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "eslint --max-warnings=0 \"{src,test}/**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "eslint --fix --max-warnings=0 \"{src,test}/**/*.{js,jsx,ts,tsx}\"",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "precommit": "npm run lint && npm run test",
     "prepublishOnly": "npm run lint && npm run test && npm run build"
@@ -45,11 +46,8 @@
     "slugify": "1.6.5"
   },
   "devDependencies": {
-    "@babel/core": "7.18.10",
-    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/plugin-transform-modules-commonjs": "7.18.6",
     "@diplodoc/babel-preset": "^1.0.2",
-    "@diplodoc/eslint-config": "^1.0.11",
+    "@diplodoc/eslint-config": "^1.0.14",
     "@diplodoc/prettier-config": "^1.0.0",
     "@diplodoc/tsconfig": "^1.0.2",
     "@types/css": "0.0.34",
@@ -68,7 +66,7 @@
     "autoprefixer": "^10.4.15",
     "esbuild": "^0.19.2",
     "esbuild-sass-plugin": "^2.12.0",
-    "eslint": "8.22.0",
+    "eslint": "^8.22.0",
     "highlight.js": "^11.8.0",
     "jest": "28.1.3",
     "markdown-it-testgen": "^0.1.6",
