--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "markdown-it-sup": "1.0.0",
     "markdownlint": "^0.25.1",
     "markdownlint-rule-helpers": "0.17.2",
-    "sanitize-html": "2.7.3",
+    "sanitize-html": "^2.11.0",
     "slugify": "1.6.5"
   },
   "devDependencies": {
@@ -59,7 +59,7 @@
     "@types/markdown-it-attrs": "4.1.0",
     "@types/markdownlint": "0.18.0",
     "@types/node": "17.0.10",
-    "@types/sanitize-html": "2.6.2",
+    "@types/sanitize-html": "^2.9.3",
     "@yandex-cloud/eslint-config": "^1.1.0",
     "@yandex-cloud/prettier-config": "^1.0.0",
     "@yandex-cloud/tsconfig": "^1.0.0",
