--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "baseUrl": ".",
     "declaration": true,
     "target": "ES6",
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "esModuleInterop": true
   },
   "include": ["src/**/*", "test/**/*"]
 }
