fix: Update tabs extension

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-    "extends": ["@diplodoc/eslint-config", "@diplodoc/eslint-config/prettier"],
+    "extends": ["@diplodoc/eslint-config"],
     "root": true,
     "overrides": [
         {
