--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prepublishOnly": "npm run lint && npm run test && npm run build"
   },
   "dependencies": {
-    "@diplodoc/tabs-extension": "2.0.12",
+    "@diplodoc/tabs-extension": "^2.0.15",
     "chalk": "4.1.2",
     "cheerio": "^1.0.0-rc.12",
     "css": "^3.0.0",
@@ -47,8 +47,8 @@
   },
   "devDependencies": {
     "@diplodoc/babel-preset": "^1.0.2",
-    "@diplodoc/eslint-config": "^1.0.14",
-    "@diplodoc/prettier-config": "^1.0.0",
+    "@diplodoc/eslint-config": "^2.0.0",
+    "@diplodoc/prettier-config": "^2.0.0",
     "@diplodoc/tsconfig": "^1.0.2",
     "@types/css": "0.0.34",
     "@types/github-slugger": "1.3.0",
@@ -60,20 +60,14 @@
     "@types/markdownlint": "0.18.0",
     "@types/node": "17.0.10",
     "@types/sanitize-html": "^2.9.3",
-    "@yandex-cloud/eslint-config": "^1.1.0",
-    "@yandex-cloud/prettier-config": "^1.0.0",
-    "@yandex-cloud/tsconfig": "^1.0.0",
     "autoprefixer": "^10.4.15",
     "esbuild": "^0.19.2",
     "esbuild-sass-plugin": "^2.12.0",
-    "eslint": "^8.22.0",
     "highlight.js": "^11.8.0",
     "jest": "28.1.3",
     "markdown-it-testgen": "^0.1.6",
     "postcss": "^8.4.27",
     "postcss-preset-env": "^9.1.1",
-    "prettier": "2.7.1",
-    "regenerator-runtime": "0.13.9",
     "ts-jest": "28.0.8",
     "typescript": "4.7.4"
   },
