--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "github-slugger": "1.4.0",
     "js-yaml": "^4.1.0",
     "lodash": "4.17.21",
-    "markdown-it": "13.0.1",
+    "markdown-it": "^14.0.0",
     "markdown-it-attrs": "4.1.4",
     "markdown-it-deflist": "2.1.0",
     "markdown-it-meta": "0.0.1",
