--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
   },
   "dependencies": {
     "@diplodoc/tabs-extension": "^2.1.0",
-    "chalk": "4.1.2",
+    "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.12",
     "css": "^3.0.0",
     "cssfilter": "0.0.10",
     "get-root-node-polyfill": "1.0.0",
-    "github-slugger": "1.4.0",
     "js-yaml": "^4.1.0",
     "lodash": "4.17.21",
     "markdown-it": "^13.0.2",
@@ -51,7 +50,7 @@
     "@diplodoc/prettier-config": "^2.0.0",
     "@diplodoc/tsconfig": "^1.0.2",
     "@types/css": "0.0.34",
-    "@types/github-slugger": "1.3.0",
+    "@types/github-slugger": "^1.3.0",
     "@types/jest": "28.1.7",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash": "4.14.183",
@@ -63,6 +62,7 @@
     "autoprefixer": "^10.4.15",
     "esbuild": "^0.19.2",
     "esbuild-sass-plugin": "^2.12.0",
+    "github-slugger": "^1.5.0",
     "highlight.js": "^11.8.0",
     "jest": "28.1.3",
     "markdown-it-testgen": "^0.1.6",
