--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@diplodoc/tabs-extension": "^3.3.0",
+    "@diplodoc/cut-extension": "^0.1.0",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.12",
     "css": "^3.0.0",
