--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "@diplodoc/tabs-extension": "^3.2.0",
     "chalk": "^4.1.2",
-    "cheerio": "^1.0.0",
+    "cheerio": "^1.0.0-rc.12",
     "css": "^3.0.0",
     "cssfilter": "0.0.10",
     "get-root-node-polyfill": "1.0.0",
