--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "js-yaml": "^4.1.0",
     "lodash": "4.17.21",
     "markdown-it": "^13.0.2",
-    "markdown-it-attrs": "4.1.4",
+    "markdown-it-attrs": "^4.2.0",
     "markdown-it-deflist": "2.1.0",
     "markdown-it-meta": "0.0.1",
     "markdown-it-sup": "1.0.0",
