fix: replace variables with values

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,5 @@ jobs:
         run: npm run test
       - name: Typecheck
         run: npm run typecheck
+      - name: Build
+        run: npm run build
