--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@diplodoc/cut-extension": "^0.3.0",
+    "@diplodoc/file-extension": "^0.1.0",
     "@diplodoc/tabs-extension": "^3.5.0",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0",
