feat: playground integration

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,15 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
+
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
@@ -34,3 +43,15 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.ROBOT_DATAUI_NPM_TOKEN}}
         if: ${{ steps.release.outputs.release_created }}
         shell: bash
+      - run: npm run artifact:pages
+        if: ${{ steps.release.outputs.release_created }}
+      - name: Upload static files as artifact
+        if: ${{ steps.release.outputs.release_created }}
+        id: artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: pages-build/
+      - name: Deploy to GitHub Pages
+        if: ${{ steps.release.outputs.release_created }}
+        id: deployment
+        uses: actions/deploy-pages@v4
