--- a/package.json
+++ b/package.json
@@ -30,15 +30,21 @@
   ],
   "scripts": {
     "build": "npm run build:lib && npm run build:dist",
-    "build:dist": "./esbuild/build.mjs",
+    "build:dist": "node ./scripts/build-static.mjs",
     "build:lib": "tsc -p tsconfig.transform.json",
+    "dev:lib": "tsc -w -p tsconfig.transform.json",
+    "dev:playground": "node ./scripts/dev.mjs",
+    "playground": "run-p dev:*",
+    "artifact:playground": "node --input-type=module -e \"(await import('./playground/scripts/pages.mjs')).bundleDeployables('./pages-build')\"",
+    "artifact:pages": "npm run build && npm run artifact:playground",
     "prepublishOnly": "npm run lint && npm run test && npm run build",
     "test": "jest --coverage",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "lint": "lint update && lint",
     "lint:fix": "lint update && lint fix",
     "pre-commit": "lint update && lint-staged",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postinstall": "cd playground && npm ci --ignore-scripts"
   },
   "dependencies": {
     "@diplodoc/cut-extension": "^0.7.1",
@@ -84,6 +90,7 @@
     "jest": "28.1.3",
     "jest-serializer-html": "^7.1.0",
     "markdown-it-testgen": "^0.1.6",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.27",
     "postcss-preset-env": "^9.1.1",
     "ts-jest": "28.0.8",
@@ -96,9 +103,5 @@
     "highlight.js": {
       "optional": true
     }
-  },
-  "moduleDirectories": [
-    "node_modules",
-    "src"
-  ]
+  }
 }
