--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,5 @@ jobs:
         run: npm run typecheck
       - name: Build
         run: npm run build
+      - name: Typecheck (Playground)
+        run: cd playground && npm run typecheck
