--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -14,7 +14,8 @@
     "skipLibCheck": true,
     "noImplicitAny": false,
     "paths": {
-      "~transform/*": ["../lib/*"]
+      "~transform/*": ["../lib/*"],
+      "~transform-dist/*": ["../dist/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
