--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "artifact:pages": "npm run build && npm run artifact:playground",
     "prepublishOnly": "npm run lint && npm run test && npm run build",
     "test": "jest --coverage",
+    "test:playwright": "npx playwright test --config playwright/playwright.config.ts",
+    "playwright:docker": "./playwright/playwright-docker-linux",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "lint": "lint update && lint",
     "lint:fix": "lint update && lint fix",
@@ -75,6 +77,7 @@
     "@diplodoc/babel-preset": "^1.0.2",
     "@diplodoc/lint": "^1.2.1",
     "@diplodoc/tsconfig": "^1.0.2",
+    "@playwright/test": "^1.51.1",
     "@types/css": "0.0.34",
     "@types/github-slugger": "^1.3.0",
     "@types/jest": "28.1.7",
