feat: move e2e tests to a separate sub-package

--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -9,5 +9,11 @@
     "target": "ES6",
     "types": ["node", "jest"]
   },
-  "include": ["src/**/*", "test/**/*"]
+  "include": [
+    "tests/**/*",
+    "fixtures/**/*",
+    "stories/**/*",
+    ".storybook/**/*",
+    "playwright/playwright.config.ts"
+  ]
 }
