--- a/package.json
+++ b/package.json
@@ -39,16 +39,13 @@
     "artifact:pages": "npm run build && npm run artifact:playground",
     "prepublishOnly": "npm run lint && npm run test && npm run build",
     "test": "jest --coverage",
-    "test:playwright": "npx playwright test --config playwright/playwright.config.ts",
-    "playwright:docker": "./playwright/playwright-docker-linux",
+    "test:playwright": "npm run build && cd e2e && npm run playwright:docker",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "lint": "lint update && lint",
     "lint:fix": "lint update && lint fix",
     "pre-commit": "lint update && lint-staged",
     "prepare": "husky",
-    "postinstall": "cd playground && npm ci --ignore-scripts || true",
-    "storybook": "storybook dev -p 6006 --config-dir test/e2e/.storybook",
-    "build-storybook": "storybook build"
+    "postinstall": "cd playground && npm ci --ignore-scripts || true"
   },
   "dependencies": {
     "@diplodoc/cut-extension": "^0.7.2",
@@ -76,18 +73,9 @@
     "ts-dedent": "^2.2.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
     "@diplodoc/babel-preset": "^1.0.2",
     "@diplodoc/lint": "^1.2.1",
     "@diplodoc/tsconfig": "^1.0.2",
-    "@playwright/test": "^1.51.1",
-    "@storybook/addon-essentials": "^8.6.7",
-    "@storybook/addon-interactions": "^8.6.7",
-    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
-    "@storybook/blocks": "^8.6.7",
-    "@storybook/html": "^8.6.7",
-    "@storybook/html-webpack5": "^8.6.7",
-    "@storybook/test": "^8.6.7",
     "@types/css": "0.0.34",
     "@types/github-slugger": "^1.3.0",
     "@types/jest": "28.1.7",
@@ -100,7 +88,6 @@
     "autoprefixer": "^10.4.15",
     "esbuild": "^0.23.1",
     "esbuild-sass-plugin": "^3.3.1",
-    "eslint-plugin-storybook": "^0.11.6",
     "highlight.js": "^11.8.0",
     "jest": "28.1.3",
     "jest-serializer-html": "^7.1.0",
@@ -108,7 +95,6 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.27",
     "postcss-preset-env": "^9.1.1",
-    "storybook": "^8.6.7",
     "ts-jest": "28.0.8",
     "typescript": "4.7.4"
   },
