--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "artifact:pages": "npm run build && npm run artifact:playground",
     "prepublishOnly": "npm run lint && npm run test && npm run build",
     "test": "jest --coverage",
-    "test:playwright": "npm run build && cd e2e && npm run playwright:docker",
+    "test:playwright:nobuild": "cd e2e && npm run playwright:docker",
+    "test:playwright": "npm run build && npm run test:playwright:nobuild",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "lint": "lint update && lint",
     "lint:fix": "lint update && lint fix",
