fix(transform): use lru for filesCache

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "markdown-it-sup": "1.0.0",
     "markdownlint": "^0.32.1",
     "markdownlint-rule-helpers": "0.17.2",
+    "quick-lru": "^5.1.1",
     "sanitize-html": "^2.11.0",
     "slugify": "1.6.6",
     "svgo": "^3.2.0",
