chore: update README and migrate storybook config to RSBuild

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -13,15 +13,14 @@
     "@playwright/test": "^1.51.1",
     "@storybook/addon-essentials": "^8.6.7",
     "@storybook/addon-interactions": "^8.6.7",
-    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
     "@storybook/blocks": "^8.6.7",
     "@storybook/html": "^8.6.7",
-    "@storybook/html-webpack5": "^8.6.7",
     "@storybook/test": "^8.6.7",
     "eslint-plugin-storybook": "^0.11.6",
     "playwright-ctrf-json-reporter": "^0.0.19",
     "process": "^0.11.10",
     "storybook": "^8.6.7",
+    "storybook-html-rsbuild": "^1.0.1",
     "typescript": "4.7.4",
     "url": "^0.11.4"
   },
