feat: implement playwright setup & e2e tests
* feat: minimal playwright setup

* feat: playwright & storybook proof of concept

* feat: move e2e tests to a separate sub-package

* chore: update .gitignore

* feat: test some edge cases with lists

* feat: github actions & more tests

* chore: update docs

* chore: update README and migrate storybook config to RSBuild

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .vscode
 
 node_modules
+node_modules_containerized
 tmp
 coverage
 /debug.js
@@ -23,3 +24,9 @@ www/
 bundle/
 
 tsconfig.tsbuildinfo
+
+*storybook.log
+
+test-results/
+playwright-report/
+ctrf/
