fix: use `exit 0` instead of `true` in the postinstall script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,9 @@ jobs:
           node-version: '18.x'
           cache: 'npm'
       - name: Install Packages
-        run: npm ci
+        run: |
+          npm ci
+          cd playground && npm ci
       - name: Lint Files
         run: npm run lint
       - name: Tests
