chore(transform): update infrastructure following package-template pattern
- Add AGENTS.md with comprehensive AI agent documentation
- Update @diplodoc/lint from ^1.2.1 to ^1.9.2
- Improve README.md structure with Features, Development sections
- Update tsconfig.json: add exclude for lib, dist, e2e, playground
- Fix linting errors: remove unused variables in catch blocks
- Fix sanitize.ts: restore error variable usage in catch block
- Update .eslintignore and .stylelintignore to exclude playground and e2e
- Add missing terminal-link dependency for Jest
- Align with package-template and dev-infrastructure requirements

--- a/.eslintignore
+++ b/.eslintignore
@@ -11,5 +11,12 @@ node_modules
 /cache
 /coverage
 /pages-build
-/playground/www
+/playground
+/e2e
 /external
+.lintstagedrc.js
+.eslintrc.js
+.prettierrc.js
+.stylelintrc.js
+jest.config.js
+esbuild/**/*.mjs
