--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   },
   "devDependencies": {
     "@diplodoc/babel-preset": "^1.0.2",
-    "@diplodoc/lint": "^1.2.1",
+    "@diplodoc/lint": "^1.9.2",
     "@diplodoc/tsconfig": "^1.0.2",
     "@types/css": "0.0.34",
     "@types/github-slugger": "^1.3.0",
@@ -90,7 +90,7 @@
     "@types/node": "17.0.10",
     "@types/sanitize-html": "^2.9.3",
     "autoprefixer": "^10.4.15",
-    "esbuild": "^0.23.1",
+    "esbuild": "^0.27.2",
     "esbuild-sass-plugin": "^3.3.1",
     "highlight.js": "^11.8.0",
     "jest": "28.1.3",
@@ -100,6 +100,7 @@
     "postcss": "^8.4.27",
     "postcss-preset-env": "^9.1.1",
     "sass": "^1.79.0",
+    "terminal-link": "^2.1.1",
     "ts-jest": "28.0.8",
     "typescript": "4.7.4"
   },
