fix(transform): add vitest/globals to tsconfig types
After migrating from Jest to Vitest, TypeScript cannot find global
test functions (describe, it, expect, etc.) because vitest/globals
types are missing from tsconfig.json.

This matches vitest.config.mjs where globals: true is enabled.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "baseUrl": ".",
     "declaration": true,
     "target": "ES6",
-    "types": ["node"]
+    "types": ["node", "vitest/globals"]
   },
   "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules", "lib", "dist", "e2e", "playground"]
