fix(lint): resolve linting errors
- Fix unused variable in video types (rename service to _service in mapped type)
- Fix prettier formatting in SCSS files (_common.scss, _note.scss)
- Fix CI workflow issues (duplicate runs and audit artifact upload)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ name: Release Package to npm
 
 on:
   release:
-    types: [created, published]
+    types: [published]
   workflow_dispatch: # Allow manual triggering
 
 permissions:
