--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@diplodoc/cut-extension": "^1.1.0",
-    "@diplodoc/file-extension": "^0.2.1",
+    "@diplodoc/cut-extension": "^1.1.1",
+    "@diplodoc/file-extension": "^0.2.2",
     "@diplodoc/tabs-extension": "^3.7.6",
     "@diplodoc/utils": "^2.1.0",
     "chalk": "^4.1.2",
@@ -78,7 +78,7 @@
   },
   "devDependencies": {
     "@diplodoc/babel-preset": "^1.0.2",
-    "@diplodoc/lint": "^1.9.2",
+    "@diplodoc/lint": "^1.10.2",
     "@diplodoc/tsconfig": "^1.0.2",
     "@types/css": "0.0.34",
     "@types/github-slugger": "^1.3.0",
@@ -88,18 +88,20 @@
     "@types/markdown-it-attrs": "4.1.0",
     "@types/node": "^22.19.7",
     "@types/sanitize-html": "^2.9.3",
+    "@vitest/coverage-v8": "^2.1.9",
     "@vitest/ui": "^2.1.8",
     "autoprefixer": "^10.4.15",
     "esbuild": "^0.27.2",
     "esbuild-sass-plugin": "^3.3.1",
     "highlight.js": "^11.8.0",
+    "jest-serializer-html": "^7.1.0",
     "markdown-it-testgen": "^0.1.6",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.27",
     "postcss-preset-env": "^9.1.1",
     "sass": "^1.79.0",
     "terminal-link": "^2.1.1",
-    "typescript": "4.7.4",
+    "typescript": "^5.6.3",
     "vitest": "^2.1.8"
   },
   "peerDependencies": {
