--- a/tsconfig.transform.json
+++ b/tsconfig.transform.json
@@ -1,16 +1,16 @@
 {
   "extends": "@diplodoc/tsconfig",
   "compilerOptions": {
-    "lib": ["DOM", "ES6"],
+    "lib": ["DOM", "ES2018"],
     "outDir": "lib",
     "module": "commonjs",
     "baseUrl": ".",
     "declaration": true,
     "isolatedModules": true,
     "noImplicitAny": true,
-    "target": "ES6",
+    "target": "ES2018",
     "types": ["node"],
-    "sourceMap": true,
+    "sourceMap": true
   },
-  "include": ["src/transform/**/*"],
+  "include": ["src/transform/**/*"]
 }
